--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn
 click==8.0.3
 Flask==1.1.2
 itsdangerous==2.0.1
@@ -12,7 +13,7 @@ pytesseract==0.3.8
 python-dotenv==0.19.1
 six==1.16.0
 typing-extensions==3.10.0.2
-gunicorn==20.1.0
+
 python-dateutil==2.8.1
 pytz==2021.1
 retrying==1.3.3
